--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "ajax": "0.0.4",
+    "fs": "0.0.1-security",
+    "jquery": "^3.6.0",
     "ol": "^6.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
